# Retail-Store-Chain-Management-System

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 043a7ecee28e_merge_heads.py  06c1168b91b7_change_total_type_in_invoice_for_.py  0897b1bee760_system_settings_table.py  08f1f89cf696_create_status_column_in_importorder_.py  09054898e2d2_create_branch_column_in_orderdetail.py  0b81e49039a7_add_product_name_to_noti.py  0bafdf4c4a47_change_full_name_type_in_employee_table.py  0bb10bf46906_set_timezone_vn.py  0cce901e0790_change_type_manager_id_to_array.py  0d249a9f2736_create_system_settings_table.py  0f4efc4aab2f_vendor_table.py  1198a7076ce2_new_table_inventory_check.py  150098dddaec_create_change_type_in_product_table.py  15cc87dab15f_create_note_column_in_importorder.py  15df23dfbf2f_add_column_to_noti_table.py  18f0d49bf56d_change_column_name_in_inventory_check_.py  1909d29e97c3_create_new_column_in_purchase_order.py  1c2cc1eca7cd_create_table_branch_employee.py  1c7eecb26fd7_change_vendor_name_to_unique_true.py  1faf9a0b0ab8_add_expiry_date_column_in_importorder.py  20b1929d61b8_create_list_import_in_importorder.py  217e458f5e45_add_pdf_url_to_contract.py  27bd4f38f1e5_add_column_in_contract.py  28707f337038_delete_order_fk_in_invoice_for_cus.py  294827de8bfc_change_type_order_detail.py  2d0fdedc694f_create_table_branch_account.py  2dae1cc6c7d1_is_contract_nullable_in_importorder.py  2de7174a1172_mapping_order_detail_to_invoice_for_.py  2eaabc8004f9_add_promotion_for_categories_table.py  (+146 more)
app/: main.py  routers.py
(+178 files in other folders)
